# skeleton

./: .gitignore  .python-version  LICENSE  README.md  pyproject.toml  tox.ini
src/skeleton/: cli.py  main.py
tests/: test_cli.py  test_main.py
