[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "skeleton"
description = "Skeleton package layout."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["numpy"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "bandit[toml]==1.7.4",
    "black==22.10.0",
    "build==0.9.0",
    "flake8==5.0.4",
    "isort==5.10.1",
    "mypy==0.982",
    "pylint==2.15.5",
    "pytest==7.2.0",
]

[project.scripts]
skeleton = "skeleton.cli:cli"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[tool.mypy]
strict = true
show_error_codes = true

[tool.pylint.messages_control]
disable = "fixme"

[tool.bandit.assert_used]
skips = ['*.test.py', '*/test_*.py']
