[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "skeleton"
description = "Skeleton package layout."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Typing :: Typed",
]
dependencies = ["numpy", 'importlib-metadata; python_version<"3.8"']
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "bandit[toml]==1.7.4",
    "black==22.10.0",
    "build==0.9.0",
    "coverage==6.5.0",
    "flake8==5.0.4",
    "isort==5.10.1",
    "mypy==0.982",
    "pylint==2.15.5",
    "pytest==7.2.0",
    "tox==3.27.1",
]

[project.scripts]
skeleton = "skeleton.cli:cli"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
strict = true
show_error_codes = true

[tool.pylint.messages_control]
disable = "fixme"

[tool.bandit.assert_used]
exclude_dirs = ["tests"]
